Content services minor refactor